// Vitest Snapshot v1

exports[`PasswordReset > matches snapshot in en 1`] = `
<page
  class="auth password-reset"
  title="Enter your new password."
>
  
  
  <form
    novalidate=""
  >
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Enter password
      </label>
      
      <input
        class=""
        name="password"
        tabindex="0"
        type="password"
      />
      <!---->
      
    </div>
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Re-enter password
      </label>
      
      <input
        class=""
        name="confirmation"
        tabindex="0"
        type="password"
      />
      <!---->
      
    </div>
    <div
      class="submit"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Change Password
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
</page>
`;

exports[`PasswordReset > matches snapshot in fr 1`] = `
<page
  class="auth password-reset"
  title="Réinitialisation de votre mot de passe"
>
  
  
  <form
    novalidate=""
  >
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Nouveau mot de passe
      </label>
      
      <input
        class=""
        name="password"
        tabindex="0"
        type="password"
      />
      <!---->
      
    </div>
    <div
      class="field password"
    >
      <label
        for="password"
      >
        Confirmation de votre nouveau mot de passe
      </label>
      
      <input
        class=""
        name="confirmation"
        tabindex="0"
        type="password"
      />
      <!---->
      
    </div>
    <div
      class="submit"
    >
      <button
        class="loading-button"
        data-v-3fdbc7b3=""
      >
        <div
          class="label"
          data-v-3fdbc7b3=""
        >
          <span
            data-v-3fdbc7b3=""
          >
            Modifier votre mot de passe
          </span>
        </div>
        <!---->
      </button>
    </div>
  </form>
</page>
`;
